--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </div>
 
                 <div class="nav-icons">
-                    <span><img src="./icons8-internet-24.png" alt=""></span>
-                    <span><img src="./icons8-linkedin-2-24.png" alt=""></span>
-                    <span><img src="./align-left.png" alt=""></span>
+                    <span><img src="./Images/icons8-internet-24.png" alt=""></span>
+                    <span><img src="./Images/icons8-linkedin-2-24.png" alt=""></span>
+                    <span><img src="./Images/align-left.png" alt=""></span>
                 </div>
             </div>
             <!-- Name & also Paragraph -->
@@ -49,7 +49,7 @@
                 <!-- Image -->
 
                 <div class="circle">
-                    <img src="./myimage.png" alt="Image not found">
+                    <img src="./Images/myimage.png" alt="Image not found">
                 </div>
 
                 <!-- right para/Services... -->
@@ -77,10 +77,10 @@
                 </div>
             </div>
             <div class="images">
-                <div class="meta"><img src="./Meta (1).png" alt="Image not found"></div>
-                <div class="google"><img src="./Google(2).png" alt="Image not found"></div>
-                <div class="linked"><img src="./Linked (3).png" alt="Image not found"></div>
-                <div class="slack"><img src="./Slack (4).png" alt="Image not found"></div>
+                <div class="meta"><img src="./Images/Meta (1).png" alt="Image not found"></div>
+                <div class="google"><img src="./Images/Google(2).png" alt="Image not found"></div>
+                <div class="linked"><img src="./Images/Linked (3).png" alt="Image not found"></div>
+                <div class="slack"><img src="./Images/Slack (4).png" alt="Image not found"></div>
             </div>
         </div>
         <div class="box2">
@@ -156,7 +156,7 @@
             <div class="cards-1">
                 <div class="card-1-one">
                     <div class="icon">
-                        <img src="./icons8-design-80.png" alt="">
+                        <img src="./Images/icons8-design-80.png" alt="">
                     </div>
                     <div class="head">
                         <h2>UI/UX Design</h2>
@@ -169,7 +169,7 @@
 
                 <div class="card-1-two">
                     <div class="icon">
-                        <img src="./icons8-computer-80.png" alt="">
+                        <img src="./Images/icons8-computer-80.png" alt="">
                     </div>
                     <div class="head">
                         <h2>Web Programming</h2>
@@ -181,7 +181,7 @@
 
                 <div class="card-1-three">
                     <div class="icon">
-                        <img src="./icons8-responsive-design-80.png" alt="Image not found">
+                        <img src="./Images/icons8-responsive-design-80.png" alt="Image not found">
                     </div>
                     <div class="head">
                         <h2>Mobile Development</h2>
